# Image-Browser

./: CMakeLists.txt  README.md  create_browser.sh  install.sh
include/api/: html_writer.hpp  image_browser.hpp
install/include/api/: html_writer.hpp
src/: CMakeLists.txt  html_writer.cc  image_browser.cc  main.cc
web_app/: eg.html  image_browser.html
